src/main/default/objects/Quiz_Answer__c/fields/IsCorrect__c.field-meta.xml
<CustomField>
    <fullName>IsCorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCorrect</label>
    <type>Checkbox</type>
</CustomField>