src/main/default/objects/Quiz_Answer__c/fields/Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Milliseconds__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Milliseconds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>