src/main/default/objects/Quiz_Answer__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player</label>
    <referenceTo>Quiz_Player__c</referenceTo>
    <relationshipLabel>Quiz Answers</relationshipLabel>
    <relationshipName>Quiz_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>