src/main/default/objects/Quiz_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>Quiz_Question__c</referenceTo>
    <relationshipLabel>Quiz Answers</relationshipLabel>
    <relationshipName>Quiz_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>