src/main/default/objects/Quiz_Answer__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Timestamp</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>