src/main/default/objects/Quiz_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Player__c</columns>
    <columns>Question__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>